# dwm_gmk

./: .gitignore  Makefile  Makefile.vars.in  configure  configure.ac  dwm.m4  getvers.sh  latest_release  mkrelease.sh
apps/: Makefile
apps/dwmgmk_quiet/: .gitignore  Makefile  dwmgmk_quiet.cc
apps/dwmgmk_uniqleft/: .gitignore  Makefile  dwmgmk_uniqleft.cc
apps/dwmgmk_uniqright/: .gitignore  Makefile  dwmgmk_uniqright.cc
include/: DwmGmkMkfileStack.hh  DwmGmkMyVars.hh  DwmGmkUtils.hh  dwm_gmk.h
man/man3/: .gitignore  Makefile  dwmgmk.3  dwmgmk.css  dwmgmk.html
packaging/: .gitignore  Makefile  debcontrol.in  dwmgmk.pc.in  fbsd_manifest.in
src/: .gitignore  DwmGmkMkfileStack.cc  DwmGmkMyVars.cc  DwmGmkUtils.cc  Makefile  dwm_gmk_aliasfn.cc  dwm_gmk_bison.cc  dwm_gmk_cppdeps.cc  dwm_gmk_curpath.cc  dwm_gmk_dirfiles.cc  dwm_gmk_files.cc  dwm_gmk_flex.cc  dwm_gmk_fromtop.cc  dwm_gmk_funcs.cc  dwm_gmk_ifcwd.cc  dwm_gmk_include.cc  dwm_gmk_init.cc  dwm_gmk_my.cc  dwm_gmk_pushpop.cc  dwm_gmk_pwd.cc  dwm_gmk_quiet.cc  dwm_gmk_relpath.cc  dwm_gmk_relpwd.cc  dwm_gmk_reverse.cc  dwm_gmk_rgxmatch.cc  dwm_gmk_rgxreplace.cc  dwm_gmk_rgxsearch.cc  dwm_gmk_rgxsubst.cc  dwm_gmk_rotate.cc  dwm_gmk_setltlibvars.cc  dwm_gmk_settop.cc  dwm_gmk_setup.cc  dwm_gmk_sort.cc  dwm_gmk_subdirs.cc  dwm_gmk_thisdir.cc  dwm_gmk_totop.cc  dwm_gmk_uniqleft.cc  dwm_gmk_uniqright.cc  dwm_gmk_uniqsort.cc  dwm_gmk_vrgx.cc
tests/: Makefile
